4.1.2
- PVR API v5.5.0: Add series link support

4.1.1
- PVR API v5.4.0: Drop SwitchChannel

4.1.0
- PVR API v5.3.0: Add implementation for GetDescrambleInfo
- PVR API v5.3.0: Adapt definition of epg based timer rule (Added PVR_TIMER_TYPE_SUPPORTS_ANY_CHANNEL attribute)
- PVR API v5.3.0: Add implementation for SetRecordingLifetime and for PVR_ADDON_CAPABILITIES lifetime values
- PVR API v5.3.0: Add support for PVR_ADDON_CAPABILITIES.bSupportsRecordingsRename

4.0.17
- Fixed timer/recordings lifetime special values mapping ("until space needed", "forever")

4.0.16
- Added support for genre to recordings

4.0.15
- Added support for 'default' recording priority setting value

4.0.14
- Readded server based play count/position for recordings (HTSP v27 and up)

4.0.13
- PVR API: Removed unused addon interface function

4.0.12
- Updated Debian package control
- PVR API: addon callback changes

4.0.11
- PVR API: Removed obsolete version functions

4.0.10
- set dependency version values automatically during build
- PVR API: Removed unused addon interface functions

4.0.9
- fixed: timeshift state and data calculation if demuxer is not active (e.g. when playing a recording)

4.0.8
- revert server based playstatus, tvheadend is not compatible at the moment

4.0.7
- fixed duplicate 'prevent duplicate episodes' timer settings values

4.0.6
- added HTSP v26 support 
- added server based playstatus for recordings (HTSP v26 and up)

4.0.5
- fix CTvheadend::DemuxIsTimeShifting

4.0.4
- improved: use the default retention (from server configuration)
- improved: buffering method when timeshifting
- fixed: possible empty duplicate detection field when opening a timer rule
- fixed: possible time offset when tuning a channel with predictive tuning enabled

4.0.3
- fixed unresponsiveness when wrong credentials are used

4.0.2
- updated build instructions in the README
- fixed Travis CI and AppVeyor automated builds
- fixed a bunch of cast warnings
- cleanup stream handling somewhat

4.0.1